--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,12 @@
 /* Global Styles*/
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -37,18 +45,39 @@ h1, h2 {
 }
 
 .content-wrap {
-  width: 800px;
+  max-width: 800px;
+  width: 85%;
   margin: 0 auto;
   padding: 60px 0;
 }
 
+h3 {
+  margin-bottom: 0;
+}
+
+.item-details h3 + p {
+  font-style: italic;
+}
+
+.item-details h3 ~ p {
+  margin: 0;
+}
+
+.divider > section {
+  border-bottom: 1px dashed #343434;
+  padding: 25px 0;
+}
+
+.divider > section:last-of-type {
+  border-bottom: none;
+}
 
 /* Profile */
 
 header {
   background-color: #2F3061;
   color: #F7FFF7;
-
+text-align: center;
 }
 
 
@@ -77,14 +106,34 @@ header {
 background: rgba(47, 48, 97, 80%);
 }
 
+.project-item {
+  overflow: hidden;
+}
 
+.project-item img {
+  float: left;
+  margin-right: 20px;
+}
+
+.project-item h3 {
+  margin-top: 0;
+}
 /* Education */
 
 
 /* Footer */
 footer {
   background: #343434;
-}
-footer h2 {
   color: #F7FFF7;
+  text-align: center;
+}
+.contact-list {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+.contact-list a {
+  padding: 15px;
+  display: inline-block;
 }
