--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,6 @@ h3 {
 header {
   background-color: #2F3061;
   color: #F7FFF7;
-text-align: center;
 }
 
 
@@ -110,30 +109,64 @@ background: rgba(47, 48, 97, 80%);
   overflow: hidden;
 }
 
-.project-item img {
-  float: left;
-  margin-right: 20px;
-}
 
 .project-item h3 {
   margin-top: 0;
 }
 /* Education */
+.education {
+  background-image: url(../images/joanna-kosinska-unsplash.jpg);
+  background-size: cover;
+  background-position: top right;
+  padding-bottom: 100px;
+}
+
+.education p {
+  width: 60%
+}
 
 
 /* Footer */
 footer {
   background: #343434;
   color: #F7FFF7;
-  text-align: center;
 }
 .contact-list {
   list-style-type: none;
   padding: 0;
-  display: flex;
-  justify-content: center;
 }
 .contact-list a {
   padding: 15px;
   display: inline-block;
+}
+
+/* Media Queries */
+@media screen and (min-width: 750px){
+  header footer {
+      text-align: center;
+  }
+
+  .project-item img {
+    float: left;
+    margin-right: 20px;
+  }
+
+  .contact-list {
+    display: flex;
+    justify-content: center;
+}
+}
+
+@media screen and (max-width: 749px) {
+  h1 {
+    font-size: 75px;
+    line-height: 0.9;
+    margin-bottom: 20px;
+  }
+ h2 {
+  line-height: 1;
+}
+.contact-list a {
+  padding: 5px;
+}
 }
