--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ background: rgba(47, 48, 97, 80%);
 }
 /* Education */
 .education {
-  background-image: url(../images/joanna-kosinska-unsplash.jpg);
+  background-image: url(joanna-kosinska-unsplash.jpg);
   background-size: cover;
   background-position: top right;
   padding-bottom: 100px;
